--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,49 @@
+@font-face {
+	font-family: 'icomoon';
+	src:url('fonts/icomoon.eot?t01bre');
+	src:url('fonts/icomoon.eot?#iefixt01bre') format('embedded-opentype'),
+		url('fonts/icomoon.woff?t01bre') format('woff'),
+		url('fonts/icomoon.ttf?t01bre') format('truetype'),
+		url('fonts/icomoon.svg?t01bre#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+	font-family: 'icomoon';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-pen:before {
+	content: "\e600";
+	margin-right: 0.8em;
+}
+.icon-star:before {
+	content: "\e601";
+	margin-right: 0.3em;
+	position: relative;
+	top: 0.1em;
+	color:rgb(236, 227, 13);
+    
+}
+.icon-arrow-down:before {
+	content: "\e602";
+	color: #f4502a;
+}
+.icon-arrow-up:before {
+	content: "\e603";
+}
+
+
 a
 {
 	color: #22bce0;
@@ -5,24 +51,189 @@ a
 body
 {
 	background:#EEEEEE;
-	font-family: "arial";
-	font-size: 16px; minuto 28:00;
+	font-family:"Open Sans";
+	font-size: 16px;
+}
+footer
+{
+	background: #22bce0; 
+	text-align: center;
+	color: rgba(255,255,255,0.8);
+	padding: 0.5em;
+}
+footer p:first-child
+{
+	margin-bottom: 0;
+}
+footer p:last-child
+{
+	margin-top: 0;
+}
+footer p:last-child:before
+{
+	content: "- ";
+}
+footer p:last-child:after
+{
+	content: " -";
 }
 header
-{
-	background: #343854
+{ 
+	position: relative;
+	background: #344b54;
+	color: white;
+	padding: 0.5em;
+	overflow: hidden;
 }
-header h1
+header figure
 {
-	font-size: 18px;
+    float: left;
+}
+
+header h1
+{   
+	font-size: 1.2em;
 	font-weight: normal;
+	margin: 0 75px 0 0;
 }
 header #logo img
 {
-	width: 52px;
+	width: 100px;
+	border-right: 1px solid white;
+	padding-right: 0.5em;
+	margin-right: 0.5em;
+
 }
 header #avatar img
 {
-	width: 55px
+	position: absolute;
+	top: 13%;
+	right: 0;
+	margin-right: 1em;
+}
+header #avatar img
+{
+	width: 55px;
 	border-radius: 50%;
+}
+nav
+{
+	background: #80bca3;
+	position: relative;
+}
+nav ul
+{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+
+}
+nav ul #publicar_nav
+{ 
+	position: absolute;
+	top:-0.3em;
+	right:0;
+}
+nav ul #publicar_nav a
+{
+	background: #22bce0;
+	padding:0.6em 0.8em 0.8em 0.6em;
+    border-radius: 0.7em;
+    font-style: italic;
+    text-shadow:rgba(0,0,0,0.5) 3px 3px 5px;
+    box-shadow:rgba(0,0,0,0.3) 8px 8px 16px;
+    font-size: 20px
+}
+nav ul li
+{
+	display: inline-block;
+	margin: 0 1em 0 0.5em;
+}
+nav ul li a 
+{
+	color: white;
+	display:block;
+	padding:0.5em 0;
+	text-decoration: none;
+}
+#contenido
+{
+	
+	margin: 1em;
+
+}
+#contenido .item
+{
+	background: white;
+	border-bottom: 3px solid #22bce0;
+	position: relative;
+	margin-bottom: 3em;
+	min-height: 128px;
+}
+#contenido .item #imagen_item img
+{
+	width: 96px;
+}
+#contenido .item #imagen_item 
+{
+	float: left;
+	margin-right: 1em;
+}
+#contenido .item .titulo_item 
+{   
+	font-size: 1.2em;
+    font-style: italic;
+    padding:0.7em 0 0.5em 0;
+    margin-bottom: 0;
+}
+#contenido .item .titulo_item a
+{   
+     color: #444;
+     text-decoration: none;
+
+}
+#contenido .item .autor_item
+{
+	color: #aaa;
+}
+#contenido .item .datos_item
+{
+	text-align: right;
+	margin-top: 1em;
+
+}
+#contenido .item .datos_item .tag_item 
+{
+	background: #f4502a;
+	border-radius:0.5em; 
+	color:white;
+	display:inline-block;
+	float:left;
+	text-decoration: none;
+    padding: 0.2em 0.5em;
+}
+#contenido .item .datos_item .fecha_item
+{
+	color:#aaa;
+	margin: 0 1em 0 3em;
+}
+#contenido .item .votacion
+{
+	position: absolute;
+	top:100%;
+	background: white;
+	width: 90%;
+	left: 5%;
+	margin-top: 3px;
+	border-radius: 0 0 0.5em 0.5em;
+	padding: 0.2em 0.5em;
+}
+#contenido .item .votacion .comentarios_item,
+#contenido .item .votacion  .guardar_item
+{
+	float:right;
+}
+#contenido .item .votacion a
+{
+	text-decoration: none;
 }
