--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,10 @@ body
 	font-family:"Open Sans";
 	font-size: 16px;
 }
+aside
+{
+    display: none;
+}
 footer
 {
 	background: #22bce0; 
@@ -96,13 +100,24 @@ header h1
 	font-weight: normal;
 	margin: 0 75px 0 0;
 }
+header #logo
+{
+    border-right: 1px solid white;
+	padding-right: 0.5em;
+	margin-right: 0.5em;
+}
 header #logo img
 {
 	width: 100px;
-	border-right: 1px solid white;
-	padding-right: 0.5em;
-	margin-right: 0.5em;
+	transition:2s;
 
+}
+header #logo img:hover
+{
+  -webkit-transform:rotate(360deg);
+	-moz-transform:rotate(90deg);
+	-o-transform:rotate(90deg);
+	-ms-transform:rotate(90deg);
 }
 header #avatar img
 {
@@ -144,6 +159,10 @@ nav ul #publicar_nav a
     box-shadow:rgba(0,0,0,0.3) 8px 8px 16px;
     font-size: 20px
 }
+nav ul #publicar_nav a:hover
+{
+	box-shadow: 0 0 30px yellow;
+}
 nav ul li
 {
 	display: inline-block;
@@ -155,6 +174,11 @@ nav ul li a
 	display:block;
 	padding:0.5em 0;
 	text-decoration: none;
+	transition:0.3s;
+}
+nav ul li a:hover
+{
+   background:#22bce0; 
 }
 #contenido
 {
@@ -168,7 +192,8 @@ nav ul li a
 	border-bottom: 3px solid #22bce0;
 	position: relative;
 	margin-bottom: 3em;
-	min-height: 128px;
+	min-height: 135px;
+
 }
 #contenido .item #imagen_item img
 {
@@ -177,13 +202,14 @@ nav ul li a
 #contenido .item #imagen_item 
 {
 	float: left;
+	padding-bottom: 2em;
 	margin-right: 1em;
 }
 #contenido .item .titulo_item 
 {   
 	font-size: 1.2em;
     font-style: italic;
-    padding:0.7em 0 0.5em 0;
+    padding:0.5em 0.3em 0 0;
     margin-bottom: 0;
 }
 #contenido .item .titulo_item a
@@ -195,11 +221,15 @@ nav ul li a
 #contenido .item .autor_item
 {
 	color: #aaa;
+	margin: 0% 0 0% 0;
+	
 }
 #contenido .item .datos_item
 {
 	text-align: right;
-	margin-top: 1em;
+	margin-top: 1.3em;
+	
+
 
 }
 #contenido .item .datos_item .tag_item 
@@ -211,11 +241,12 @@ nav ul li a
 	float:left;
 	text-decoration: none;
     padding: 0.2em 0.5em;
+    margin-bottom: 0.2em;
 }
 #contenido .item .datos_item .fecha_item
 {
 	color:#aaa;
-	margin: 0 1em 0 3em;
+	margin: 0 1em 0 0;
 }
 #contenido .item .votacion
 {
@@ -236,4 +267,33 @@ nav ul li a
 #contenido .item .votacion a
 {
 	text-decoration: none;
+}
+@media screen and (min-width: 800px){
+#contenido
+{
+  overflow: hidden;
+}    
+#contenido .item
+{
+	width: 49%;
+	float: left;
+}
+#contenido .item:nth-child(odd)
+{
+    margin-right: 2%;
+}
+}
+@media screen and (min-width: 1023px){
+aside
+{
+    display: block; 
+    float: right;
+    width: 27%;
+    margin: 1em;   
+}
+aside video
+{
+
+	width: 100%;
+}
 }
